Fix for width issue on mobile and header position

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -61,7 +61,7 @@ $navColor: rgba(0, 0, 0, 0);
   @media screen and (max-width: $break-small) {
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20px;
+    margin: 124px 0 20px 0;
   }
 
   ul.navbar-end {
